feat: manager scheduler, get chats usecase
