# internal/repositories/problems/api.go
@@ -2,26 +2,41 @@ package problems
 
 import (
 	"context"
+	"errors"
 	"fmt"
-	"time"
 
-	"entgo.io/ent/dialect/sql"
-
+	"github.com/gerladeno/chat-service/internal/store"
+	"github.com/gerladeno/chat-service/internal/store/chat"
+	"github.com/gerladeno/chat-service/internal/store/message"
 	"github.com/gerladeno/chat-service/internal/store/problem"
 	"github.com/gerladeno/chat-service/internal/types"
 )
 
+var ErrProblemNotFound = errors.New("problem not found")
+
 func (r *Repo) CreateIfNotExists(ctx context.Context, chatID types.ChatID) (types.ProblemID, error) {
-	problemID, err := r.db.Problem(ctx).Create().
-		SetChatID(chatID).
-		SetCreatedAt(time.Now()).OnConflict(
-		sql.ConflictColumns("chat_id"),
-		sql.ConflictWhere(sql.IsNull("resolved_at"))).UpdateChatID().
-		ID(ctx)
-	if err != nil {
-		return types.NewProblemID(), fmt.Errorf("upserting problem: %v", err)
+	pID, err := r.db.Problem(ctx).Query().
+		Unique(false).
+		Where(
+			problem.HasChatWith(chat.ID(chatID)),
+			problem.ResolvedAtIsNil(),
+		).
+		FirstID(ctx)
+	if nil == err {
+		return pID, nil
 	}
-	return problemID, nil
+	if !store.IsNotFound(err) {
+		return types.ProblemIDNil, fmt.Errorf("select existent problem: %v", err)
+	}
+
+	p, err := r.db.Problem(ctx).Create().
+		SetChatID(chatID).
+		Save(ctx)
+	if err != nil {
+		return types.ProblemIDNil, fmt.Errorf("create new problem: %v", err)
+	}
+
+	return p.ID, nil
 }
 
 func (r *Repo) GetManagerOpenProblemsCount(ctx context.Context, managerID types.UserID) (int, error) {
@@ -33,4 +48,45 @@ func (r *Repo) GetManagerOpenProblemsCount(ctx context.Context, managerID types.
 		return 0, fmt.Errorf("get manager open problems count: %v", err)
 	}
 	return count, nil
+}
+
+func (r *Repo) GetProblemsWithoutManager(ctx context.Context) ([]Problem, error) {
+	problems, err := r.db.Problem(ctx).Query().Where(
+		problem.ManagerIDIsNil(),
+		problem.HasMessagesWith(message.IsVisibleForManager(true)),
+	).Order(
+		problem.ByCreatedAt(),
+	).All(ctx)
+	if err != nil {
+		return nil, fmt.Errorf("get all problems without assigned manager: %v", err)
+	}
+	result := make([]Problem, 0, len(problems))
+	for _, p := range problems {
+		result = append(result, adaptStoreProblem(p))
+	}
+	return result, nil
+}
+
+func (r *Repo) AssignManager(ctx context.Context, problemID types.ProblemID, managerID types.UserID) error {
+	_, err := r.db.Problem(ctx).UpdateOneID(problemID).SetManagerID(managerID).Save(ctx)
+	switch {
+	case store.IsNotFound(err):
+		return ErrProblemNotFound
+	case err != nil:
+		return fmt.Errorf("assign manager for problem: %v", err)
+	}
+	return nil
+}
+
+func (r *Repo) GetRequestID(ctx context.Context, problemID types.ProblemID) (types.RequestID, error) {
+	msg, err := r.db.Message(ctx).Query().Where(
+		message.ProblemID(problemID),
+	).Order(message.ByCreatedAt()).First(ctx)
+	switch {
+	case store.IsNotFound(err):
+		return types.RequestIDNil, ErrProblemNotFound
+	case err != nil:
+		return types.RequestIDNil, fmt.Errorf("get request id by problem id: %v", err)
+	}
+	return msg.InitialRequestID, nil
 }
